  			nicht Boss-Servants, um 43% gesenkt.
  			Bei Reparatur eines voll ausgebauten Helicopters in Level 50
  			wird auch die Energie wieder voll aufgefüllt.
  			Die Rahmenbreite im Fenstermodus wurde erhoht.
  			Ein Button-Beschriftungsfehler im Optionen-Menü wurde behoben.
  			Wenn einer Gegner den Helikopter mit einen Traktorstrahl fest
  			hält und gleichzeitig in Y-Richtung von eiem Hindernis-Gegner
  			verschoben wird, dann beendet dies den Traktor.
  			Von Stopp-Raketen und EMP-Schockwellen getroffene Gegner können 
  			sich nicht mehr weg teleportieren.
  			Gegner mit der Teleporter-Funktion nutzen diese jetzt auch, um 
  			einer EMP-Schockwelle zu entkommen.
  			Ein Fehle der dazu führte das sich getarnte Gegner mit der Fähigkeit
  			Kamikaze nach Beschuss beim Angriff nicht entarnen wurde behoben.
  			Durch Barrier zerstörte Gegner können auch PowerUps verlieren.
  			Zerstörte Barriers können keine PowerUps mehr verlieren.
  			Bei Wechsel in den Fenstermodus erscheitn das Spielfenster nun in
  			der Mitte des Bildschirms.  	
  			Das Spiel wird nun standardmäßig im Fenstermodus geöffnet.
  			Ein Fehler, der zu einer zu großen Darstellung der PowerUps im Menü
  			geführt hat, wurde behoben.
  						
 	v1.3.3	Das Spiel wird nicht länger pausiert, wenn sich die Maus
 			außerhalb des Spielfensters befindet.
	
	v1.3.4  Einige Fehler im Zusammenhang mit der Markierung von Buttons 
			im Startscreen-Menü wurden behoben.
			Ein Fehler, der dazu führte, dass das Text-Label im
			Startscreen-Menü mehrfach zu sehen ist, wurde behoben.
			Ein Fehler, der nach minimieren des Fenster zu einer fehlerhaften 
			Hintergrundfarbe geführt hat, wurde behoben.
			Ein Fehler, der dazu führte, dass Nachrichten aus dem Werkstatt-Menü
			auf dem Startscreen zu sehen war, wurde behoben.
			Ein Fehler, der bei Reparatur mit Hilfe von Cheats zu einer fehlerhaften
			Bennung der MainMenü-Buttons geführt hatte, wurde behoben.

Letzte Änderung: 26.02.2022